--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ functools32==3.2.3.post2
 matplotlib==2.0.2
 mock==2.0.0
 numpy==1.12.1
+olefile==0.44
 packaging==16.8
 pandas==0.20.1
 pbr==3.0.1
+Pillow==4.1.1
 protobuf==3.3.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
